--- a/portfolio website-18-12/index.html
+++ b/portfolio website-18-12/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="max-width-1285px.css">
     <link rel="stylesheet" href="max-width-895px.css">
+    <link rel="stylesheet" href="max-width-991px.css">
+    <link rel="stylesheet" href="max-width-480px.css">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -179,7 +181,7 @@
         <section class="contact" id="contact">
             <h2 class="heading">Contact <span>Me</span></h2>
 
-            <form action="">
+            <form action="" class="detail">
                 <div class="input-group">
                     <div class="input-box">
                         <input type="text" name="" id="" placeholder="Enter Your Name">
